--- a/src/css/Bottombar.css
+++ b/src/css/Bottombar.css
@@ -1,6 +1,7 @@
 .bottombar {
     display: flex;
     justify-content: space-around;
+    padding: 8px;
     background: #FFF;
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.12);
 }
