--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,11 @@
-html, body{
+body, #root{
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.content-container {
+    flex-grow: 1;
+    padding: 20px;
 }
