--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -13,7 +13,7 @@
     font-size: 18px;
 }
 
-.menu-container {
+.menu_container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
