Refactor: 페이지 연결 및 MainTemplate 사용

--- a/src/css/Bottombar.css
+++ b/src/css/Bottombar.css
@@ -1,4 +1,4 @@
-.bottombar {
+.bottom_bar {
     display: flex;
     justify-content: space-around;
     padding: 8px;
@@ -6,6 +6,6 @@
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.12);
 }
 
-.bottombar_icon {
+.bottom_bar_icon {
     height: 36px;
 }
