--- a/src/css/Upperbar.css
+++ b/src/css/Upperbar.css
@@ -1,4 +1,4 @@
-.navbar {
+.upper_bar {
     display: flex;
     align-items: center;
     padding: 20px;
@@ -6,12 +6,12 @@
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.03);
 }
 
-.navbar_logo {
+.upper_bar_logo {
     height: 20px;
     margin-right: auto;
 }
 
-.navbar_icon {
+.upper_bar_icon {
     width: 20px;
     height: 20px;
     margin-left: 20px;
