--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,7 +8,7 @@ body, #root{
 .content_container {
     flex-grow: 1;
     padding: 20px;
-    width: 100%;
+    min-width: 400px;
     max-width: 700px;
     margin: 0 auto;
 }
