--- a/src/css/Sign.css
+++ b/src/css/Sign.css
@@ -2,13 +2,17 @@ input {
     border: none;
     border-bottom: solid #A2A2A2 1px;
     margin-bottom: 20px;
-    width: 342px;
+    width: 100%;
     padding: 4px;
 }
 
 input::placeholder{
     color: #E6E6E6;
     font-size: 15px;
+}
+
+input:focus {
+    outline: none;
 }
 
 p {
@@ -22,13 +26,150 @@ a {
     font-size: 12px;
 }
 
-.signBtn {
+.signup_content {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    padding: 80px;
+    min-width: 400px;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.signup_form p {
+    font-size: 15px;
+}
+
+.term_title {
+    flex-grow: 1;
+}
+
+.term_line {
+    display: flex;
+    align-items: center;
+    margin: 12px 0px;
+}
+
+.bottomBtn {
     position: absolute;
     bottom: 0px;
     width: 100%;
     padding: 18px;
     border: none;
+    background-color: #F7F7F7;
+    color: #8E8E8E;
+    font-size: 16px;
+}
+
+.bottomBtn:hover{
     background-color: #6A9CFD;
     color: white;
+}
+
+.blue_title {
+    color: #6A9CFD;
+    font-size: 24px;
+    font-weight: 700;
+    margin: 0px;
+}
+
+.gray_title {
+    color: #A2A2A2;
+    font-size: 15px;
+    font-weight: 700;
+    margin: 4px 0px;
+}
+
+.term_big {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.term_small {
     font-size: 16px;
+    font-weight: 400;
+}
+
+.blue_text {
+    color: #6A9CFD;
+    font-size: 16px;
+    font-weight: 400;
+    margin-left: 10px;
+}
+
+.round_checkbox {
+    width: 24px;
+    height: 24px;
+    border: 2px solid #D9D9D9;
+    border-radius: 50%;
+    appearance: none;
+    cursor: pointer;
+    margin: 0px 0px 0px auto;
+}
+
+.round_checkbox::before {
+    content: '\2713'; /* 체크 모양 아이콘 (유니코드) */
+    font-size: 18px;
+    line-height: 18px; /* 수직 정렬을 위한 줄 높이 설정 */
+    color: white;
+}
+
+.round_checkbox:checked {
+    background-color: #6A9CFD; 
+}
+
+.emailAuthBtn {
+    width: 200px;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    align-self: center;
+    color: #8E8E8E;
+    background: #F7F7F7;
+}
+
+.emailAuthBtn:hover {
+    color: white;
+    background: #6A9CFD;
+}
+
+.dormInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.input_box {
+    width: 30px;
+    height: 31px;
+    margin: 0px 5px 0px 15px;
+    padding: 0px 16px;
+    text-align: center;
+    border-radius: 5px;
+    border: 1px solid #E6E6E6;
+}
+
+.screenShot {
+    display: flex;
+    width: 100%;
+    height: 130px;
+    border-radius: 16px;
+    align-items: center;
+    justify-content: center;
+    background: #E6E6E6;
+}
+
+.screenShotInstruction p {
+    font-size: 12px;
+    font-weight: 700;
+    margin: 4px 0px;
+}
+
+.screenShotInstruction .blueText {
+    color: #6A9CFD;
+}
+
+.screenShotInstruction .grayText {
+    color: #A2A2A2;
 }
