--- a/src/css/StayOut.css
+++ b/src/css/StayOut.css
@@ -214,12 +214,26 @@ abbr[title="월요일"], abbr[title="화요일"], abbr[title="수요일"], abbr[
     border: none;
 }
 
+.stayout_specAddr_container {
+    width: 390px;
+    height: 25px;
+    border: 1px solid #e6e6e6;
+    border-radius: 5px;
+    margin-left: 15px;
+    text-align: center;
+    background-color: white;
+    color: #000000;
+    display: flex;
+    justify-content: space-between;
+}
+
 .stayout_addr_container {
     width: 390px;
     height: 25px;
     border: 1px solid #e6e6e6;
     border-radius: 5px;
     margin-left: 15px;
+    margin-bottom: 5px;
     text-align: center;
     background-color: white;
     color: #000000;
@@ -240,11 +254,16 @@ abbr[title="월요일"], abbr[title="화요일"], abbr[title="수요일"], abbr[
     justify-content: space-between;
 }
 
-.stayout_addr_field:focus, .stayout_reason_field:focus {
+.stayout_specAddr_field:focus, .stayout_reason_field:focus {
     outline: none;
 }
 
-.stayout_addr_field, .stayout_reason_field {
+.stayout_specAddr_field, .stayout_reason_field {
+    width: 300px;
+    border: none;
+}
+
+.stayout_addr_field {
     width: 300px;
     border: none;
 }
@@ -295,4 +314,10 @@ abbr[title="월요일"], abbr[title="화요일"], abbr[title="수요일"], abbr[
 .stayout_title_left_content {
     display: flex;
     justify-content: flex-start;
+}
+
+.search_addr_btn {
+    border: none;
+    background: none;
+    color: #6A9CFD;
 }
