--- a/src/css/MyPage.css
+++ b/src/css/MyPage.css
@@ -1,3 +1,8 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+body {
+    font-family: Pretendard, serif;
+}
+
 .myPage_title_container {
     display: flex;
     align-items: center;
@@ -16,11 +21,44 @@
 }
 
 .myPage_list_container {
-    margin-top: 40px;
+    margin-top: 30px;
     width: 150px;
 }
 
 .myPage_list_element, .myPage_list_element:focus {
-    margin-bottom: 20px;
+    margin-bottom: 24px;
     cursor: pointer;
+}
+
+.myPage_list li {
+    list-style-type: none;
+}
+
+.duksung_dorm_info {
+    font-size: 12px;
+    font-weight: 600;
+    margin: 0;
+}
+
+.duksung_dorm_number {
+    font-size: 17px;
+    margin: 2px 0 0 0;
+}
+
+.gaon_dorm_addr {
+    font-size: 12px;
+    color: #8E8E8E;
+    margin: 12px 0 0 0;
+}
+
+.international_dorm_addr {
+    font-size: 12px;
+    color: #8E8E8E;
+    margin: 3px 0 0 0;
+}
+
+.myPage_footer {
+    margin: 0 0 0 40px;
+    position: absolute;
+    bottom: 5%;
 }
