--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -7,6 +7,7 @@
     border-radius: 8px;
     background: #F7F7F7;
     margin: 10px;
+    cursor: pointer;
 }
 
 .button3:hover {
@@ -22,6 +23,7 @@
     border: none;
     border-radius: 10px;
     font-size: 12px;
+    cursor: pointer;
 }
 
 .blue_circ_btn {
@@ -32,6 +34,7 @@
     border: none;
     border-radius: 20px;
     font-size: 16px;
+    cursor: pointer;
 }
 
 .done_true {
@@ -44,6 +47,7 @@
     text-align: center;
     width: 100%;
     font-size: 15px;
+    cursor: pointer;
 }
 
 .done_false {
@@ -56,6 +60,7 @@
     text-align: center;
     width: 100%;
     font-size: 15px;
+    cursor: pointer;
 }
 
 .confirm_true {
@@ -72,6 +77,7 @@
     text-align: center;
     width: 100%;
     font-size: 15px;
+    cursor: pointer;
 }
 
 .modal_btn_no {
@@ -83,6 +89,7 @@
     font-size: 13px;
     text-align: center;
     color: #B3B3B3;
+    cursor: pointer;
 }
 
 .modal_btn_yes {
@@ -94,4 +101,5 @@
     font-size: 13px;
     text-align: center;
     color: white;
+    cursor: pointer;
 }
