--- a/src/css/NewPost.css
+++ b/src/css/NewPost.css
@@ -8,16 +8,22 @@
     
 }
 
-.post-title {
+#post-category {
+    color: #6A9CFD;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+#post-title {
     border-bottom: solid #E6E6E6 1px;
 }
 
-.post-content {
+#post-content {
     width: 100%;
     height: 80%;
     border: none;
 }
 
-.post-content::placeholder, .post-title::placeholder {
+#post-content::placeholder, .post-title::placeholder {
     color: #8E8E8E;
 }
