[FEAT] 게시글 보기, 댓글 등록 및 조회

--- a/src/css/Community.css
+++ b/src/css/Community.css
@@ -33,6 +33,11 @@ hr {
     font-weight: 400;
 }
 
+.post-details {
+    display: flex;
+    align-items: center;
+}
+
 .post-details span {
     margin-left: 2px;
     margin-right: 6px;
