--- a/src/css/NewPost.css
+++ b/src/css/NewPost.css
@@ -14,6 +14,10 @@
     font-weight: 700;
 }
 
+#post-form {
+    height: 90%;
+}
+
 #post-title {
     border-bottom: solid #E6E6E6 1px;
 }
@@ -22,8 +26,30 @@
     width: 100%;
     height: 80%;
     border: none;
+    font-family: Pretendard;
 }
 
 #post-content::placeholder, .post-title::placeholder {
     color: #8E8E8E;
+    font-size: 12px;
+    font-weight: 600;
+    font-family: Pretendard;
+}
+
+.deliveryInfo {
+    display: flex;
+    text-wrap: nowrap;
+    align-items: center;
+}
+
+.deliveryInfo input{
+    border: none;
+    margin: 5px 10px;
+    font-family: Pretendard;
+}
+
+.deliveryInfo span{
+    color: #6A9CFD;
+    font-size: 12px;
+    font-weight: 700;
 }
