--- a/src/css/Sign.css
+++ b/src/css/Sign.css
@@ -27,10 +27,9 @@ button {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    padding: 80px;
-    min-width: 400px;
+    padding: 32px 24px 80px 24px;
+    min-width: 320px;
     max-width: 700px;
-    margin: 0 auto;
 }
 
 .signup_form {
@@ -107,7 +106,7 @@ Input {
     margin-left: 10px;
 }
 
-.round_checkbox {
+.term_line .round_checkbox {
     width: 24px;
     height: 24px;
     border: 2px solid #D9D9D9;
@@ -118,7 +117,7 @@ Input {
     padding: 2px;
 }
 
-.round_checkbox::before {
+.term_line .round_checkbox::before {
     content: '\2713'; /* 체크 모양 아이콘 (유니코드) */
     font-size: 18px;
     line-height: 18px; /* 수직 정렬을 위한 줄 높이 설정 */
