--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,22 +1,34 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
 body, #root{
+    font-family: Pretendard, serif;
     margin: 0;
     display: flex;
     flex-direction: column;
     height: 100vh;
 }
 
+.center_content_container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    justify-content: center;
+    padding: 24px;
+    min-width: 320px;
+    max-width: 500px;
+}
+
 .content_container {
     flex-grow: 1;
-    padding: 20px;
-    min-width: 400px;
+    padding: 24px;
+    min-width: 320px;
     max-width: 500px;
-    margin: 0 auto;
 }
 
 .title_container {
     display: flex;
     align-items: center;
     font-size: 16px;
-    padding: 10px;
+    padding: 12px 8px;
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.03);
 }
